negative_tests/test2.octo
new_function(int x, int y) -> int { return z = x+y; }
